tests/NormalTests/paczka1/fuzzy1/77348864.err
Error in line 4: J4eeR A368 81,0
Error in line 6: eEeo A733 98,5
Error in line 10: A368 A733 7,1
Error in line 15: A368 A530 97,8
Error in line 14: eEeo A530 16,2
Error in line 28: eEeo A368 87,7
Error in line 31: eEeo S107 72,5
